--- a/PenAndPaperInterface/PAPIClasses/Resources/Strings_EN.resx
+++ b/PenAndPaperInterface/PAPIClasses/Resources/Strings_EN.resx
@@ -1386,6 +1386,9 @@
   <data name="Translation_NON_PLAYER_CHARACTER" xml:space="preserve">
     <value>NPC</value>
   </data>
+  <data name="Translation_OPTIONS_BUTTON" xml:space="preserve">
+    <value>Options</value>
+  </data>
   <data name="Translation_PAGE" xml:space="preserve">
     <value>page</value>
   </data>
@@ -1412,6 +1415,9 @@
   </data>
   <data name="Translation_QUIT" xml:space="preserve">
     <value />
+  </data>
+  <data name="Translation_QUIT_BUTTON" xml:space="preserve">
+    <value>Quit</value>
   </data>
   <data name="Translation_RANDOM" xml:space="preserve">
     <value>Random</value>
@@ -1491,6 +1497,9 @@
   <data name="Translation_START" xml:space="preserve">
     <value>Start</value>
   </data>
+  <data name="Translation_START_BUTTON" xml:space="preserve">
+    <value>Start</value>
+  </data>
   <data name="Translation_STORY_POINT" xml:space="preserve">
     <value />
   </data>
@@ -1541,6 +1550,9 @@
   </data>
   <data name="Translation_WEAR_OFF" xml:space="preserve">
     <value>wear off</value>
+  </data>
+  <data name="Translation_WELCOME_LABEL" xml:space="preserve">
+    <value>Welcome, </value>
   </data>
   <data name="Translation_YES" xml:space="preserve">
     <value>yes</value>
