Created the start view, added english translations, added button functionality

--- a/PenAndPaperInterface/PAPIClasses/Resources/Strings_EN.resx
+++ b/PenAndPaperInterface/PAPIClasses/Resources/Strings_EN.resx
@@ -1122,11 +1122,41 @@
   <data name="Species_ORC" xml:space="preserve">
     <value />
   </data>
+  <data name="Translation_BUILDING_SELECTION_BUTTON" xml:space="preserve">
+    <value>Buildings</value>
+  </data>
+  <data name="Translation_BUILDING_SELECTION_BUTTON_DESCRIPTION" xml:space="preserve">
+    <value>Manage your saved buildings and create new ones (not yet implemented)</value>
+  </data>
+  <data name="Translation_CHARACTER_SELECTION_BUTTON" xml:space="preserve">
+    <value>Characters</value>
+  </data>
+  <data name="Translation_CHARACTER_SELECTION_BUTTON_DESCRIPTION" xml:space="preserve">
+    <value>Manage your saved characters and create new ones (not yet implemented)</value>
+  </data>
+  <data name="Translation_DESCRIPTION_LABEL" xml:space="preserve">
+    <value>Description</value>
+  </data>
   <data name="Translation_DESIGN_LABEL" xml:space="preserve">
     <value>Shown design</value>
   </data>
+  <data name="Translation_GAME_SELECTION_BUTTON" xml:space="preserve">
+    <value>Games</value>
+  </data>
+  <data name="Translation_GAME_SELECTION_BUTTON_DESCRIPTION" xml:space="preserve">
+    <value>Manage your saved games and create new ones (not yet implemented)</value>
+  </data>
+  <data name="Translation_ITEM_SELECTION_BUTTON" xml:space="preserve">
+    <value>Items</value>
+  </data>
+  <data name="Translation_ITEM_SELECTION_BUTTON_DESCRIPTION" xml:space="preserve">
+    <value>Manage your saved items and create new ones (not yet implemented)</value>
+  </data>
   <data name="Translation_LANGUAGE_LABEL" xml:space="preserve">
     <value>Shown language</value>
+  </data>
+  <data name="Translation_OPEN_CREATOR_BUTTON" xml:space="preserve">
+    <value>Open selected creator</value>
   </data>
   <data name="Translation_OPTIONS_BUTTON" xml:space="preserve">
     <value>Options</value>
@@ -1140,8 +1170,17 @@
   <data name="Translation_RETURN_BUTTON" xml:space="preserve">
     <value>Return</value>
   </data>
+  <data name="Translation_SELECTION_LABEL" xml:space="preserve">
+    <value>Select what you want to do:</value>
+  </data>
   <data name="Translation_START_BUTTON" xml:space="preserve">
     <value>Start</value>
+  </data>
+  <data name="Translation_VEHICLE_SELECTION_BUTTON" xml:space="preserve">
+    <value>Vehicles</value>
+  </data>
+  <data name="Translation_VEHICLE_SELECTION_BUTTON_DESCRIPTION" xml:space="preserve">
+    <value>Manage your saved vehicles and create new ones (not yet implemented)</value>
   </data>
   <data name="Translation_WELCOME_LABEL" xml:space="preserve">
     <value>Welcome</value>
